--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ authors = [{ name = "fernroot", email = "arnaldojaws@gmail.com" }]
 license = { text = "BSD-3-Clause license" }
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["authlib (>=1.6.0,<2.0.0)", "django (>=5.2.2,<6.0.0)"]
+dependencies = [
+    "authlib (>=1.6.0,<2.0.0)",
+    "django (>=5.2.2,<6.0.0)",
+    "django-bootstrap5 (>=25.1,<26.0)",
+    "django-bootstrap-icons (>=0.9.0,<0.10.0)",
+]
 
 
 [build-system]
@@ -56,14 +61,10 @@ preview = true
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = [
-    "COM",
-    "CPY",
-    "D"
-]
+ignore = ["COM", "CPY", "D"]
 
 [tool.ruff.lint.per-file-ignores]
-"*/migrations/**.py" = ["E501", "RUF012"]
+"*/migrations/**.py" = ["ANN", "ARG001", "E501", "RUF012"]
 
 # MYPY
 
@@ -80,13 +81,9 @@ disallow_subclassing_any = true
 disallow_untyped_calls = true
 disallow_untyped_decorators = true
 disallow_untyped_defs = true
-exclude = [
-    "migrations/.*.py"
-]
+exclude = ["migrations/.*.py"]
 python_version = "3.13"
-plugins =[
-    "mypy_django_plugin.main"
-]
+plugins = ["mypy_django_plugin.main"]
 warn_incomplete_stub = true
 warn_no_return = true
 warn_redundant_casts = true
